--- a/topics.Rmd
+++ b/topics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: |
-  | **Probability & Statistics I**
+  | **Probability \& Statistics I**
   | **Syllabus**
 author: |
   | MTH 461 Section A
@@ -21,11 +21,11 @@ create_footer()
 
 <br>
 
-> See Books & Online Resources Lists for the readings & practice materials.
+> See Books \& Online Resources Lists for the readings \& practice materials.
 > 
 > The reading materials are not mandatory but it is encouraged.
 
-<br>The "Reading" column in the table below contains page numbers (Pg.) or chapters (ch.) on which it refers to a label in the Books & Online Resources List. For example "Pg. 1-5 [S]" refers to pages 1-5 of the first item in the list, which is the textbook titled "Probability, Statistics, and Data: A Fresh Approach Using R".
+<br>The "Reading" column in the table below contains page numbers (Pg.) or chapters (ch.) on which it refers to a label in the Books \& Online Resources List. For example "Pg. 1-5 [S]" refers to pages 1-5 of the first item in the list, which is the textbook titled "Probability, Statistics, and Data: A Fresh Approach Using R".
 
 <br>
 
@@ -33,20 +33,20 @@ create_footer()
 
 | **Week** | **Day** | **Topic** | **Worksheet** | **Homework** | **Reading** |
 |:-----:|:-----:|:---------------:|:-----:|:-----:|:-----:|
-| **1** | Tu 8/27 | Introduction and Orientation to <br>Probability & Statistics | Review Set Theory & Calculus | - | Syllabus |
+| **1** | Tu 8/27 | Introduction and Orientation to <br>Probability \& Statistics | Review Set Theory \& Calculus | - | Syllabus |
 |  | Th 8/29 | Basic Definition of Probability | TBA | - | TBA |
 | **2** | Tu 9/3 | Counting and Arranging | TBA | Assigned: Homework 1 | TBA |
 |  | Th 9/5 | General Definition of Probability | TBA | - | TBA |
 | **3** | Tu 9/10 | Independence of Events | TBA | Assigned: Homework 2 | TBA |
-|  | Th 9/12 | Conditional Probability and Baye's Theorem | TBA | - | TBA |
-| **4** | Tu 9/17 | Random Variables and Law of Large Numbers | TBA | - | TBA |
+|  | Th 9/12 | Conditional Probability \& <br>Baye's Theorem | TBA | - | TBA |
+| **4** | Tu 9/17 | Random Variables \& <br>Law of Large Numbers | TBA | - | TBA |
 |  | Th 9/19 | Functions of Random Variables | TBA | - | TBA |
 | **5** | Tu 9/24 | _Review_ | Exam 1 Examples | - | Exam 1 Topics |
 |  | Th 9/26 | **Exam 1** | - | - | - |
-| **6** | Tu 10/1 | Discrete Random Variables and Probability Mass Functions | TBA | Assigned: Homework 3 | TBA |
+| **6** | Tu 10/1 | Discrete Random Variables \& <br>Probability Mass Functions | TBA | Assigned: Homework 3 | TBA |
 |  | Th 10/3 | Bernoulli, Binomial, and Geometric Distributions | TBA | - | - |
 | **7** | Tu 10/8 | Expectation and Variance of Discrete Random Variables | TBA | Assigned: Homework 4 | TBA |
-|  | Th 10/10 | Continuous Random Variables and Probability Density Functions | TBA | - | TBA |
+|  | Th 10/10 | Continuous Random Variables \& <br>Probability Density Functions | TBA | - | TBA |
 | **8** | Tu 10/15 | _Fall Vacation_ | - | - | - |
 |  | Th 10/17 | _Fall Vacation_ | - | - | - |
 | **9** | Tu 10/22 | Uniform, Normal, and Exponential Distributions | TBA | - | TBA |
@@ -74,7 +74,7 @@ Along with textbooks [S] and [B], some of the course materials (contents of work
 
 <br>
 
-## **Books & Online Resources Lists**
+## **Books \& Online Resources Lists**
 
 ```{r echo=FALSE}
 refs <- bibtex::read.bib("references.bib")
