--- a/topics.Rmd
+++ b/topics.Rmd
@@ -35,10 +35,10 @@ create_footer()
 |:---:|:----:|:---------------:|:------:|:-----:|:--------:|
 | **1** | Tu 8/27 | Introduction and Orientation to <br>Probability \& Statistics | Review Set Theory \& Calculus | - | Syllabus |
 |  | Th 8/29 | Basic Definition of Probability | Computing Probabilities and Random Sampling | - | Sect. 1.1,1.2,\&1.3 [B] |
-| **2** | Tu 9/3 | Counting and Arranging | Introduce the Basics of Combinatorics | - | Sect. 1.4 \& 1.5 [B], and<br> Sect. 2.4 [S] |
-|  | Th 9/5 | General Definition of Probability | Understand the properties of probability | - | Sect. 1.6 [B], and<br>Sect. 2.1\&2.2 [S] |
-| **3** | Tu 9/10 | Conditional Probability | TBA | Assigned: Homework 1 | TBA |
-|  | Th 9/12 | Baye's Theorem, \&<br>The Law of Total Probability | TBA | - | TBA |
+| **2** | Tu 9/3 | Counting and Arranging | Introduce the Basics of Combinatorics | - | Sect. 1.4 \& 1.5 [B], and<br>Sect. 2.4 [S] |
+|  | Th 9/5 | General Definition of Probability | Understand the Properties of Probability | - | Sect. 1.6 [B], and<br>Sect. 2.1\&2.2 [S] |
+| **3** | Tu 9/10 | Conditional Probability | Think Conditionally | Assigned: Homework 1 | Sect. 2.1 \& 2.2 [B], and<br>Sect. 2.3 [S] |
+|  | Th 9/12 | Baye's Theorem, \&<br>The Law of Total Probability | Update Conditional Probabilities | - | Sect. 2.3 \& 2.4 [B] |
 | **4** | Tu 9/17 | Random Variables \&<br>Probability Functions | - | Assigned: Homework 2 | TBA |
 |  | Th 9/19 | Expectation \&<br>The Law of Large Numbers | TBA | - | TBA |
 | **5** | Tu 9/24 | _Review_ | Exam 1 Examples | - | Exam 1 Topics |
