--- a/topics.Rmd
+++ b/topics.Rmd
@@ -39,17 +39,17 @@ create_footer()
 |  | Th 9/5 | General Definition of Probability | Understand the Properties of Probability | - | Sect. 1.6 [B], and<br>Sect. 2.1\&2.2 [S] |
 | **3** | Tu 9/10 | Conditional Probability | Think Conditionally | - | Sect. 2.1 \& 2.2 [B], and<br>Sect. 2.3 [S] |
 |  | Th 9/12 | Baye's Theorem, \&<br>The Law of Total Probability | Update Conditional Probabilities | Assigned: Homework 1 | Sect. 2.3 \& 2.4 [B] |
-| **4** | Tu 9/17 | Random Variables \&<br>Probability Functions | Describe a Random Variable | - | Sect. 3.1 \& 3.2 [B] |
-|  | Th 9/19 | Expectation \&<br>The Law of Large Numbers | Compute the Expected Value | - | TBA |
-| **5** | Tu 9/24 | Discrete Random Variables \&<br>Probability Mass Functions | TBA | - | TBA |
-|  | Th 9/26 | Bernoulli, Binomial, and Geometric Distributions | TBA | Assigned: Homework 2 | TBA |
-| **6** | Tu 10/1 | Expectation and Variance of Discrete Random Variables | TBA | - | TBA |
-|  | Th 10/3 | Continuous Random Variables \&<br>Probability Density Functions | TBA | - | TBA |
+| **4** | Tu 9/17 | Random Variables \&<br>Probability Functions | Describe a Random Variable | - | Sect. 3.1 [B] |
+|  | Th 9/19 | Expectation \&<br>The Law of Large Numbers | Compute the Expected Value | - | Sect. 4.1, 4.2, \& 4.3 [B] |
+| **5** | Tu 9/24 | Discrete Random Variables \&<br>Probability Mass Functions | TBA | - | Sect. 3.2 \& 3.3 |
+|  | Th 9/26 | Discrete Probability Distributions | TBA | Assigned: Homework 2 | Sect. 3.4, 3.5, \& 3.6 [B] |
+| **6** | Tu 10/1 | Expectation and Variance of Discrete Random Variables | TBA | - | Sect. 4.4, 4.5, \& 4.6 [B] |
+|  | Th 10/3 | Continuous Random Variables \&<br>Probability Density Functions | TBA | - | Sect. 5.1 [B] |
 | **7** | Tu 10/8 | _Review_ | Exam 1 Examples | - | Exam 1 Topics |
 |  | Th 10/10 | **Exam 1** | - | - | - |
 | **8** | Tu 10/15 | _Fall Vacation_ | - | - | - |
 |  | Th 10/17 | _Fall Vacation_ | - | - | - |
-| **9** | Tu 10/22 | Uniform, Normal, and Exponential Distributions | TBA | - | TBA |
+| **9** | Tu 10/22 | Continuous Probability Distributions | TBA | - | TBA |
 |  | Th 10/24 | Expectation and Variance of Continuous Random Variables | TBA | Assigned: Homework 4 | TBA |
 | **10** | Tu 10/29 | Moment Generating Functions | TBA | - | TBA |
 |  | Th 10/31 | Joint and Marginal Distributions | TBA | Assigned: Homework 5 | TBA |
