--- a/topics.Rmd
+++ b/topics.Rmd
@@ -42,19 +42,19 @@ create_footer()
 | **4** | Tu 9/17 | Random Variables \&<br>Probability Functions | Describe a Random Variable | - | Sect. 3.1 [B] |
 |  | Th 9/19 | Expectation \&<br>The Law of Large Numbers | Compute the Expected Value | - | Sect. 4.1, 4.2, \& 4.3 [B] |
 | **5** | Tu 9/24 | Discrete Random Variables \&<br>Probability Mass Functions | Create Probability Mass Functions | - | Sect. 3.2 \& 3.3 |
-|  | Th 9/26 | Discrete Probability Distributions | Understand Known Probability Distributions | Assigned: Homework 2 | Sect. 3.4, 3.5, \& 3.6 [B] |
-| **6** | Tu 10/1 | Expectation and Variance of Discrete Random Variables | Interpret the Expected value and Variance | - | Sect. 4.4, 4.5, \& 4.6 [B] |
-|  | Th 10/3 | Continuous Random Variables \&<br>Probability Density Functions | TBA | - | Sect. 5.1 [B] |
+|  | Th 9/26 | Discrete Probability Distributions | Understand Known Discrete Probability Distributions | Assigned: Homework 2 | Sect. 3.4, 3.5, \& 3.6 [B] |
+| **6** | Tu 10/1 | Expectation and Variance of Discrete Random Variables | Interpret the Expected Value and Variance | - | Sect. 4.4, 4.5, \& 4.6 [B] |
+|  | Th 10/3 | Continuous Random Variables \&<br>Probability Density Functions | Create Probability Density functions | - | Sect. 5.1 [B] |
 | **7** | Tu 10/8 | _Review_ | Exam 1 Examples | - | Exam 1 Topics |
 |  | Th 10/10 | **Exam 1** | - | - | - |
 | **8** | Tu 10/15 | _Fall Vacation_ | - | - | - |
 |  | Th 10/17 | _Fall Vacation_ | - | - | - |
 | **9** | Tu 10/22 | Continuous Probability Distributions | TBA | - | TBA |
-|  | Th 10/24 | Expectation and Variance of Continuous Random Variables | TBA | Assigned: Homework 4 | TBA |
+|  | Th 10/24 | Expectation and Variance of Continuous Random Variables | TBA | Assigned: Homework 3 | TBA |
 | **10** | Tu 10/29 | Moment Generating Functions | TBA | - | TBA |
-|  | Th 10/31 | Joint and Marginal Distributions | TBA | Assigned: Homework 5 | TBA |
+|  | Th 10/31 | Joint and Marginal Distributions | TBA | - | TBA |
 | **11** | Tu 11/5 | Conditional Distributions | TBA | - | TBA |
-|  | Th 11/7 | Conditional Expectation and Variance | TBA | Assigned: Homework 6 | TBA |
+|  | Th 11/7 | Conditional Expectation and Variance | TBA | Assigned: Homework 4 | TBA |
 | **12** | Tu 11/12 | Maximum Likelihood Estimation | TBA | - | TBA |
 |  | Th 11/14 | Markov Chains | TBA | - | TBA |
 | **13** | Tu 11/19 | _Review_ | Exam 2 Examples | - | Exam 2 Topics |
